[package]
name = "rust_jwt_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.5", features = ["mysql"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
dotenvy = "0.15"
dyn-clone = "1.0.17"
trait-async = "0.1.24"
